# KafkaPyClient

./: README.md  pyproject.toml
confluent_kafka/: Consumer.py  ConsumerAuth.py  ProducerAuth.py
kafka-python/: JsonExample.py  ProducerAuth.py  SimpleConsumer.py  json_test.py
